// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeaturedAttacker renders correctly 1`] = `
<article
  className="player--featured"
>
  <header
    className="player--featured__header"
  >
    <div
      className="bg-green-mask--horizontal"
    >
      <div
        className="player--featured__bg-avatar"
        style={
          Object {
            "backgroundImage": "url(https://api.kcvvelewijt.be/sites/default/files/fallback/kcvv-player-bg.png)",
          }
        }
      />
      <div
        className="bg-white-end"
      />
    </div>
  </header>
  <section
    className="player--featured__content"
  >
    <div
      className="player--featured__name__wrapper"
    >
      <h1
        className="player--featured__name"
      >
        <span
          className="player--featured__name-first"
        >
          Noah
        </span>
        <span
          className="player--featured__name-last"
        >
          Van Ransbeeck
        </span>
      </h1>
      <div
        aria-hidden="true"
        className="player--featured__bg-shirt-number"
      >
        11
      </div>
    </div>
    <aside
      className="player--featured__statistics"
    >
      <section
        className="player--featured__statistics-item"
      >
        <div
          className="player--featured__statistics-item__number"
        >
          34
        </div>
        <div
          className="player--featured__statistics-item__label"
        >
          Wedstrijden
        </div>
      </section>
      <section
        className="player--featured__statistics-item"
      >
        <div
          className="player--featured__statistics-item__number"
        >
          41
        </div>
        <div
          className="player--featured__statistics-item__label"
        >
          Doelpunten
        </div>
      </section>
      <section
        className="player--featured__statistics-item player--featured__statistics-item--cards"
      >
        <div
          className="player--featured__statistics-item__number"
        >
          3
        </div>
        <div
          className="player--featured__statistics-item__label"
        >
          <span
            className="stats__card stats__card--yellow"
          />
        </div>
      </section>
      <section
        className="player--featured__statistics-item player--featured__statistics-item--cards"
      >
        <div
          className="player--featured__statistics-item__number"
        >
          0
        </div>
        <div
          className="player--featured__statistics-item__label"
        >
          <span
            className="stats__card stats__card--red"
          />
        </div>
      </section>
    </aside>
    <footer
      className="player--featured__footer"
    >
      <a
        className="rich-link"
        href="/player/noah-van-ransbeeck"
      >
        Meer over 
        Noah
         »
      </a>
    </footer>
  </section>
</article>
`;

exports[`FeaturedKeeper renders correctly 1`] = `
<article
  className="player--featured"
>
  <header
    className="player--featured__header"
  >
    <div
      className="bg-green-mask--horizontal"
    >
      <div
        className="player--featured__bg-avatar"
        style={
          Object {
            "backgroundImage": "url(https://api.kcvvelewijt.be/sites/default/files/fallback/kcvv-player-bg.png)",
          }
        }
      />
      <div
        className="bg-white-end"
      />
    </div>
  </header>
  <section
    className="player--featured__content"
  >
    <div
      className="player--featured__name__wrapper"
    >
      <h1
        className="player--featured__name"
      >
        <span
          className="player--featured__name-first"
        >
          Kevin
        </span>
        <span
          className="player--featured__name-last"
        >
          Van Ransbeeck
        </span>
      </h1>
      <div
        aria-hidden="true"
        className="player--featured__bg-shirt-number"
      >
        1
      </div>
    </div>
    <aside
      className="player--featured__statistics"
    >
      <section
        className="player--featured__statistics-item"
      >
        <div
          className="player--featured__statistics-item__number"
        >
          34
        </div>
        <div
          className="player--featured__statistics-item__label"
        >
          Wedstrijden
        </div>
      </section>
      <section
        className="player--featured__statistics-item"
      >
        <div
          className="player--featured__statistics-item__number"
        >
          25
        </div>
        <div
          className="player--featured__statistics-item__label"
        >
          Cleansheets
        </div>
      </section>
      <section
        className="player--featured__statistics-item player--featured__statistics-item--cards"
      >
        <div
          className="player--featured__statistics-item__number"
        >
          5
        </div>
        <div
          className="player--featured__statistics-item__label"
        >
          <span
            className="stats__card stats__card--yellow"
          />
        </div>
      </section>
      <section
        className="player--featured__statistics-item player--featured__statistics-item--cards"
      >
        <div
          className="player--featured__statistics-item__number"
        >
          1
        </div>
        <div
          className="player--featured__statistics-item__label"
        >
          <span
            className="stats__card stats__card--red"
          />
        </div>
      </section>
    </aside>
    <footer
      className="player--featured__footer"
    >
      <a
        className="rich-link"
        href="/player/kevin-van-ransbeeck"
      >
        Meer over 
        Kevin
         »
      </a>
    </footer>
  </section>
</article>
`;
